Update naming of figures

--- a/text/tables_and_figures.tex
+++ b/text/tables_and_figures.tex
@@ -86,7 +86,8 @@ versus non-RCC).
 %% continuously varying HR
 \begin{figure}
  \centering
-\caption{Hazard ratio for all cause mortality among RCC cases as a function of 
+\caption*{Figure 1: Hazard ratio for all cause mortality among RCC cases as a 
+function of 
 circulating concentration of 25(OH)D$_3$ at diagnosis, relative to a 
 concentration of 50~nmol/L. 25(OH)D$_3$ was modeled using restricted cubic 
 splines with knots at the 10th, 33rd, 67th, and 90th percentiles of its 
@@ -106,7 +107,8 @@ regression coefficients. The ``rug plot'' shows the observed distribution of
 %% Interactions with various factors
 \begin{figure}
  \centering
-\caption{Hazard ratios (HR) and 95\% confidence intervals (CI) for a 
+\caption*{Supplementary Figure 1: Hazard ratios (HR) and 95\% confidence intervals 
+(CI) for a 
 doubling in season-adjusted 25(OH)D$_3$ concentration by potential effect 
 modifiers. \footnotesize{Estimates derived from Cox models stratified by country 
 of recruitment, and adjusted for stage, age at recruitment, and sex. $p$-values 
