Marie rather than Lenka as co-author from Brno

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -51,9 +51,9 @@
 survival after diagnosis with kidney cancer. 
 
 \noindent \textbf{Authors:} David C Muller (1), Ghislaine Scelo (1),  David 
-Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Lenka 
-Foretova/Marie Navratilova (5), Dana Mates (6), {\O}ivind Midttun (7), 
-Per Magne Ueland (8,9), Paul Brennan (1), Mattias Johansson (1).
+Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Marie Navratilova (5), 
+Dana Mates (6), {\O}ivind Midttun (7), Per Magne Ueland (8,9), Paul Brennan (1), 
+Mattias Johansson (1).
 
 {\footnotesize 
 \noindent
