Incorporate comments from Per and Oivind

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -175,8 +175,8 @@ except in Ceske Budejovice, Czech Republic, where samples were stored at
 $-20^{\circ}$C. All samples were transported at $-80^{\circ}$C to IARC for 
 long-term storage at $-150^{\circ}$C. Samples underwent a single thawing cycle 
 for aliquoting of 400uL for shipment to the Bevital laboratory in Bergen, 
-Norway, for analysis. Liquid chromatography coupled to tandem 
-mass spectrometry was used to separately analyse vitamin D as 25(OH)D$_2$ and 
+Norway (www.bevital.no), for analysis. Liquid chromatography coupled to tandem 
+mass spectrometry was used to analyse vitamin D as 25(OH)D$_2$ and 
 25(OH)D$_3$ \cite{midttun_determination_2011}. 25(OH)D$_2$ was undetectable in 
 the majority of samples, so our analyses focus on 25(OH)D$_3$. The lab is DEQAS 
 (www.deqas.org) certified.
@@ -221,7 +221,8 @@ had a similar age distribution to those who died during follow-up. 518
 of the 630 cases (82\%) were conventional RCC. 50\% of deaths occurred among 
 participants with a stage IV tumor, and 15\% of those surviving to the end of 
 follow-up had stage IV diagnoses. In contrast, 72 \% of those surviving to the 
-end of follow-up were diagnosed with stage I-II disease.
+end of follow-up were diagnosed with stage I-II disease. Measured 25(OH)D$_3$ 
+concentrations ranged between 7 and 134 nmol/L, with a median of 43 nmol/L.
 
 Hazard of death from any cause was inversely associated with 
 circulating concentrations of 25(OH)D$_3$ (Table~2). After adjusting for 
@@ -229,7 +230,7 @@ stage, age, and sex, the hazard was 43\% lower among those in the highest
 compared to the lowest group of seasonally-adjusted concentration 
 (HR$_{4\text{vs}1}$ 0.57, 95\% CI [0.34, 0.97]). Although no statistical 
 evidence for heterogeneity by cause of death was noted 
-($P_\text{heterogeneity}$ 0.53), we estimated HR$_{4\text{vs}1}$ of 0.77 
+($P_\text{heterogeneity}$ 0.53), we estimated HR$_{4\text{vs}1}$ of 0.70 
 (95\% CI 0.39, 1.24) for RCC specific death, and 0.36 (95\% CI 0.14, 0.91) for 
 non-RCC causes of death, suggesting that this association was not specific to 
 RCC death (Table~2). The HR for continuously varying 25(OH)D$_3$ (relative to a 
@@ -256,7 +257,7 @@ RCC-specific survival. We observed that higher concentrations of 25(OH)D$_3$
 were associated with a lower rate of death, but that this association was not 
 restricted to RCC specific death. We also observed an indication this 
 association might be somewhat stronger for those with a 
-history of hypertension, advanced age at diagosis, or early stage disease.
+history of hypertension, advanced age at diagnosis, or early stage disease.
 
 We recently studied circulating 25(OH)D$_3$ and RCC risk of RCC in a prospective
 case-control study nested within the EPIC cohort \cite{muller_circulating_2014}.
