Add corresponding author info and draft cover letter

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -50,10 +50,10 @@
 \noindent \textbf{Title:} Circulating 25-Hydroxyvitamin D$_3$ and 
 survival after diagnosis with kidney cancer. 
 
-\noindent \textbf{Authors:} David C Muller (1), Ghislaine Scelo (1),  David 
+\noindent \textbf{Authors:} David C Muller$^*$ (1), Ghislaine Scelo (1),  David 
 Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Marie Navratilova (5), 
 Dana Mates (6), {\O}ivind Midttun (7), Per Magne Ueland (8,9), Paul Brennan (1), 
-Mattias Johansson (1).
+Mattias Johansson$^*$  (1).
 
 {\footnotesize 
 \noindent
@@ -74,8 +74,21 @@ Institute, Brno, Czech Republic \newline
 Norway
 }
 
-\textbf{Corresponding authors:} 
-
+\noindent \textbf{*Corresponding authors:} 
+\begin{table}[h!]
+\begin{tabular}{ll}
+David C Muller                  &      Mattias Johansson \\      
+Genetic Epidemiology Group      &       Genetic Epidemiology Group  \\
+International Agency for Research on Cancer & International Agency for Research on 
+Cancer       \\
+150 cours Albert Thomas         &  150 cours Albert Thomas      \\
+Lyon 69008 &       Lyon 69008\\
+FRANCE                     & FRANCE\\
+email: \texttt{MullerD@fellows.iarc.fr} & 
+email: \texttt{JohanssonM@iarc.fr}
+\end{tabular}
+\end{table}
+\clearpage
 
 
 
@@ -88,7 +101,7 @@ D at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.
 \newline 
 \textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
 multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
-25-Hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted Cox models to estimate 
+25-hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted Cox models to estimate 
 hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
 season-adjusted 25(OH)D$_3$.\newline 
 \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
