Minor edits from Charlotte prior to submission

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -50,6 +50,11 @@
 \noindent \textbf{Title:} Circulating 25-Hydroxyvitamin D$_3$ and 
 survival after diagnosis with kidney cancer. 
 
+\noindent \textbf{Running title:} Vitamin D and kidney cancer survival.
+
+\noindent \textbf{Keywords:} Vitamin D; 25-Hydroxyvitamin D; Kidney cancer; 
+prognosis; survival; case-cohort
+
 \noindent \textbf{Authors:} David C Muller$^*$ (1), Ghislaine Scelo (1),  David 
 Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Marie Navratilova (5), 
 Dana Mates (6), {\O}ivind Midttun (7), Per Magne Ueland (8,9), Paul Brennan (1), 
@@ -67,7 +72,7 @@ Hygiene
 and Epidemiology, Prague, Czech Republic \newline
 5. Department of Cancer Epidemiology and Genetics, Masaryk Memorial Cancer 
 Institute, Brno, Czech Republic \newline
-6. National Institute of Public Health, Bucharest, Romania
+6. National Institute of Public Health, Bucharest, Romania \newline
 7. Bevital AS, Bergen, Norway \newline
 8. Department of Clinical Science, University of Bergen, Norway \newline
 9. Laboratory of Clinical Biochemistry, Haukeland University Hospital, Bergen, 
@@ -100,7 +105,7 @@ email: \texttt{JohanssonM@iarc.fr}
 D at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
 \newline 
 \textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
-multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
+multi-centre case-control study in Eastern Europe. Vitamin D was assessed as 
 25-hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted Cox models to estimate 
 hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
 season-adjusted 25(OH)D$_3$.\newline 
@@ -187,7 +192,7 @@ ethylenediaminetetraacetic acid (EDTA), and processed as rapidly as possible
 except in Ceske Budejovice, Czech Republic, where samples were stored at 
 $-20^{\circ}$C. All samples were transported at $-80^{\circ}$C to IARC for 
 long-term storage at $-150^{\circ}$C. Samples underwent a single thawing cycle 
-for aliquoting of 400uL for shipment to the Bevital laboratory in Bergen, 
+for aliquoting of 400$\mu$L for shipment to the Bevital laboratory in Bergen, 
 Norway (www.bevital.no), for analysis. Liquid chromatography coupled to tandem 
 mass spectrometry was used to analyse vitamin D as 25(OH)D$_2$ and 
 25(OH)D$_3$ \cite{midttun_determination_2011}. 25(OH)D$_2$ was undetectable in 
@@ -253,7 +258,7 @@ corroborate those in Table~2, suggesting a monotonic inverse association between
 
 Supplementary Figure~1 presents HRs for a doubling in seasonally adjusted 
 25(OH)D$_3$ concentration separately by categories of several potential effect 
-modifiers. The estimated magnitude of the association was consistent by, sex, stage, 
+modifiers. The estimated magnitude of the association was consistent by sex, stage, 
 histology, history of diabetes, smoking status, and alcohol intake status. 
 There was some indication that the association might be stronger among those 
 diagnosed at age 65 years or older, those with a history of hypertension, those 
@@ -268,11 +273,11 @@ We investigated whether differences in circulating concentrations of
 25(OH)D$_3$ at the time of diagnosis of RCC were associated with all-cause and 
 RCC-specific survival. We observed that higher concentrations of 25(OH)D$_3$ 
 were associated with a lower rate of death, but that this association was not 
-restricted to RCC specific death. We also observed an indication this 
+restricted to RCC specific death. We also observed an indication that this 
 association might be somewhat stronger for those with a 
 history of hypertension, advanced age at diagnosis, or early stage disease.
 
-We recently studied circulating 25(OH)D$_3$ and RCC risk of RCC in a prospective
+We recently studied circulating 25(OH)D$_3$ and risk of RCC in a prospective
 case-control study nested within the EPIC cohort \cite{muller_circulating_2014}.
 This analysis indicated an inverse association between 
 25(OH)D$_3$ and risk of RCC as well as a non-linear U-shaped association 
