Minor changes before submission to CEBP

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -2,8 +2,8 @@
 %% draft manuscript
 
 \documentclass[a4paper,11pt]{article}
-%\usepackage[numbers,comma,square,sort&compress]{natbib}
-\usepackage{natbib}
+\usepackage[numbers,comma,square,sort&compress]{natbib}
+%\usepackage{natbib}
 \renewcommand{\cite}{\citep}
 %\usepackage{cite}
 %\renewcommand{\citeleft}{(}
@@ -153,7 +153,7 @@ other prognostic factors.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% #3 methods 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Methods}
+\section*{Materials and Methods}
 \subsection*{The K2 study}
 Participants included patients who were above 18 years of age and diagnosed 
 with kidney cancer in one of 4 participating centres in Czech Republic, 1 
@@ -325,7 +325,7 @@ Research on Cancer, supported by the Cancer Council Australia.
 %% #5 references
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-\bibliographystyle{./bibtex/bjc}
+\bibliographystyle{vancouver}
 \bibliography{./bibtex/library_vitd}
 
 
