Final changes before submission to CEBP

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -93,6 +93,20 @@ email: \texttt{MullerD@fellows.iarc.fr} &
 email: \texttt{JohanssonM@iarc.fr}
 \end{tabular}
 \end{table}
+
+\noindent \textbf{Financial support:} \newline
+The World Cancer Research Fund (UK) supported the biochemical analyses. This work 
+was also supported by a grant from the NCI (U01-CA155309), and the Ministry of 
+Health Czech Republic -- DRO (MMCI, 00209805). The work undertaken by DCM that was 
+reported in this paper was done so during the tenure of an IARC-Australia 
+Postdoctoral Fellowship from the International Agency for Research on Cancer, 
+supported by the Cancer Council Australia. 
+
+\noindent \textbf{Conflict of interest:} The authors have nothing to declare.
+\noindent \textbf{Word count:} Abstract 140; Text 1625; \newline
+\textbf{Tables:} 2; \textbf{Figures:}  1; \textbf{Supplementary figures:} 1
+
+
 \clearpage
 
 
