Updates for resubmission to CEBP

--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -2991,3 +2991,21 @@
   Language                 = {en}
 }
 
+@article{feldman_role_2014,
+	title = {The role of vitamin {D} in reducing cancer risk and progression},
+	volume = {14},
+	issn = {1474-175X},
+	doi = {10.1038/nrc3691},
+	abstract = {Vitamin D is not really a vitamin but the precursor to the potent steroid hormone calcitriol, which has widespread actions throughout the body. Calcitriol regulates numerous cellular pathways that could have a role in determining cancer risk and prognosis. Although epidemiological and early clinical trials are inconsistent, and randomized control trials in humans do not yet exist to conclusively support a beneficial role for vitamin D, accumulating results from preclinical and some clinical studies strongly suggest that vitamin D deficiency increases the risk of developing cancer and that avoiding deficiency and adding vitamin D supplements might be an economical and safe way to reduce cancer incidence and improve cancer prognosis and outcome.
+View full text},
+	language = {en},
+	number = {5},
+	urldate = {2015-03-27},
+	journal = {Nature Reviews Cancer},
+	author = {Feldman, David and Krishnan, Aruna V. and Swami, Srilatha and Giovannucci, Edward and Feldman, Brian J.},
+	month = may,
+	year = {2014},
+	pages = {342--357},
+	file = {Full Text PDF:/home/mullerd/Dropbox/Library/zotero/storage/AR3FXSV6/Feldman et al. - 2014 - The role of vitamin D in reducing cancer risk and .pdf:application/pdf;Snapshot:/home/mullerd/Dropbox/Library/zotero/storage/G3GCQACP/nrc3691.html:text/html}
+}
+
