Update based on initial QC by CEBP (references, abstract format, etc)

--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -453,7 +453,7 @@
 
   Author                   = {{Cancer Research UK}},
   Month                    = {April},
-  Note                     = {Accessed: 28 May 2014},
+  Note                     = {[cited 2014 May 28]},
   Year                     = {2014},
 
   Copyright                = {Cancer Research {UK}},
@@ -635,9 +635,7 @@
   ISSN                     = {1097-0215},
   Keywords                 = {cancer, global estimates, Incidence, Mortality},
   Language                 = {en},
-  Shorttitle               = {Estimates of worldwide burden of cancer in 2008},
-  Url                      = {http://onlinelibrary.wiley.com/doi/10.1002/ijc.25516/abstract},
-  Urldate                  = {2014-05-08}
+  Shorttitle               = {Estimates of worldwide burden of cancer in 2008}
 }
 
 @Article{ferlay_cancer_2013,
@@ -658,9 +656,7 @@
   Language                 = {English},
   Owner                    = {mullerd},
   Shorttitle               = {Cancer incidence and mortality patterns in Europe},
-  Timestamp                = {2014.05.28},
-  Url                      = {http://www.ejcancer.com/article/S0959804913000075/abstract},
-  Urldate                  = {2014-05-28}
+  Timestamp                = {2014.05.28}
 }
 
 @Article{flanders_analytic_1991,
@@ -2992,7 +2988,7 @@
 }
 
 @article{feldman_role_2014,
-	title = {The role of vitamin {D} in reducing cancer risk and progression},
+	title = {The role of vitanternational Committee of Medical Journal Editors (ICMJE) Recommendations for the Conduct, Reporting, Editing and Publication of Scholarly Work in Medical Journals:min {D} in reducing cancer risk and progression},
 	volume = {14},
 	issn = {1474-175X},
 	doi = {10.1038/nrc3691},
