--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -55,10 +55,12 @@ survival after diagnosis with kidney cancer.
 \noindent \textbf{Keywords:} Vitamin D; 25-Hydroxyvitamin D; Kidney cancer; 
 prognosis; survival; case-cohort
 
-\noindent \textbf{Authors:} David C Muller$^*$ (1), Ghislaine Scelo (1),  David 
-Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Marie Navratilova (5), 
-Dana Mates (6), {\O}ivind Midttun (7), Per Magne Ueland (8,9), Paul Brennan (1), 
-Mattias Johansson$^*$  (1).
+\noindent \textbf{Authors:} David C Muller$^{1*}$ , Ghislaine Scelo$^{1}$,  David 
+Zaridze$^{2}$, Vladimir Janout$^{3}$, Ivana Holcatova$^{4}$, Marie 
+Navratilova$^{5}$, 
+Dana Mates$^{6}$ , {\O}ivind Midttun$^{7}$, Per Magne Ueland$^{8-9}$, 
+Paul Brennan$^{1}$, 
+Mattias Johansson$^{1*}$.
 
 {\footnotesize 
 \noindent
@@ -104,7 +106,7 @@ Postdoctoral Fellowship from the International Agency for Research on Cancer,
 supported by the Cancer Council Australia. 
 
 \noindent \textbf{Conflict of interest:} The authors have nothing to declare.
-\noindent \textbf{Word count:} Abstract 140; Text 1625; \newline
+\noindent \textbf{Word count:} Abstract 168; Text 2037; \newline
 \textbf{Tables:} 2; \textbf{Figures:}  1; \textbf{Supplementary figures:} 1 
 \textbf{Supplementary tables:} 1
 
@@ -117,23 +119,22 @@ supported by the Cancer Council Australia.
 %% #2 abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-\noindent \textbf{Background:} We evaluated whether concentrations of vitamin 
-D at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
-\newline 
-\textbf{Methods:} We conducted a case-cohort study of 630 RCC cases, including 203 
-deaths) from a multi-centre case-control study in Eastern Europe. Vitamin D was 
-assessed as 25-hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted Cox models to 
-estimate hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
-season-adjusted 25(OH)D$_3$.\newline 
-\textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
+Prospective cohort studies have provided some evidence that circulating vitamin D 
+is associated with risk of, and survival from renal cell carcinoma (RCC), but it is 
+unclear whether concentrations of vitamin D at the time of diagnosis of renal cell 
+RCC is associated with prognosis. We conducted a case-cohort study of 630 RCC cases, 
+including 203 deaths) from a multi-centre case-control study in Eastern Europe. 
+Vitamin D was assessed as 25-hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted 
+Cox models to estimate hazard ratios (HR) and 95\% confidence intervals (CI) by 
+categories of season-adjusted 25(OH)D$_3$. 
+Higher concentrations of 25(OH)D$_3$ 
 were associated with lower risk of death after adjusting for stage, age, sex, 
 and country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). The 
 inverse associations of 25(OH)D$_3$ with death were most notable among those who 
 died from non-RCC causes and those diagnosed with early stage disease. 
-\newline 
-\textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
+In summary, 25(OH)D$_3$ concentration at diagnosis 
 of RCC was inversely associated with all-cause mortality rates, but not specifically 
-with RCC outcome. \newline
+with RCC outcome. 
 
 \end{abstract}
 
@@ -445,11 +446,5 @@ thus give an indication of the posterior density for the hazard ratio under a
 uniform prior on the regression coefficients. The ``rug plot'' shows the observed 
 distribution of 25(OH)D$_3$.
 
-
-\noindent \textbf{Supplementary Figure 1}: Hazard ratios (HR) and 95\% confidence 
-intervals (CI) for a doubling in season-adjusted 25(OH)D$_3$ concentration by 
-potential effect modifiers. \footnotesize{Estimates derived from Cox models 
-stratified by country of recruitment, and adjusted for stage, age at recruitment, 
-and sex. $p$-values are from Wald tests of the interaction terms.} 
 
 \end{document}
